fix: chang symbol

--- a/index.html
+++ b/index.html
@@ -1,219 +1,132 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
-
+<html class="page" lang="en">
 <head>
-
     <meta charset="UTF-8">
-
     <title class="title">
         CV
     </title>
-
     <link rel="stylesheet" href="styles/style.css">
-
 </head>
-
 <body class="wrapper">
-
     <header class="header">
-
         <nav class="header-nav">
-
             <a class="button" href="#Contacts">CONTACTS</a>
-
             <a class="button" href="#Education">EDUCATION</a>
-
             <a class="button" href="#CODE-EXAMPLES">CODE EXAMPLES</a>
-
             <a class="button" href="#About">ABOUT ME</a>
-
         </nav>
-
     </header>
-
     <main class="container">
-
         <aside class="cont aside">
-
             <h1 class="first">
                 Kovalenok Eugen
             </h1>
-
             <section class="header-logo bg-brown">
-
                 <a class="bg-brown" href="https://github.com/KlimXam">
-
                     <img class="avatar" src="https://avatars.githubusercontent.com/u/102540884?v=4" alt="avatar">
-
                 </a>
-
                 <br>
-
                 <a class="logo-link bg-brown" href="https://github.com/KlimXam">
-
                     <h2 class="bg-brown">
                         Kovalenok Eugen
                     </h2>
-
                 </a>
-
             </section>
-
             <hr class="line-aside">
-
             <section class="aside-section bg-brown">
-
                 <h3 class="text-white bg-brown" id="Skills">
-                 SKILLS
+                    SKILLS
                 </h3>
-
                 <ul class="skills-list bg-brown">
-
                     <li class="aside-item">
-
                         <p class="aside-text text-white bg-brown">
                             HTML
                         </p>
-
                     </li>
-
                     <li class="aside-item">
-
                         <p class="aside-text text-white bg-brown">
                             CSS
                         </p>
-
                     </li>
-
                     <li class="aside-item">
-
                         <p class="aside-text text-white bg-brown">
                             CorelDRAW
                         </p>
-
                     </li>
-
                     <li class="aside-item">
-
                         <p class="aside-text text-white bg-brown">
                             AutoCAD
                         </p>
-
                     </li>
-
                 </ul>
-
             </section>
-
             <hr class="line-aside">
-
             <section class="aside-section bg-brown">
-
                 <h3 class="text-white bg-brown">
-                 LANGUAGE
+                    LANGUAGE
                 </h3>
-
                 <ul class="language-list bg-brown">
-
                     <li class="aside-item">
-
                         <p class="aside-text text-white bg-brown">
                             Belarusian (native)
                         </p>
-
                     </li>
-
                     <li class="aside-item">
-
                         <p class="aside-text text-white bg-brown">
                             Russian (native)
                         </p>
-
                     </li>
-
                     <li class="aside-item">
-
                         <p class="aside-text text-white bg-brown">
                             English (A1)
                         </p>
-
                     </li>
-
                 </ul>
-
             </section>
-
             <hr class="line-aside">
-
             <section class="aside-section bg-brown">
-
                 <h3 class="text-white bg-brown">
                     PROJECTS
                 </h3>
-
                 <ul class="projects-list bg-brown">
-
                     <li class="aside-item">
-
                         <a class="dec-non text-white bg-brown" href="https://klimxam.github.io/rsschool-cv/cv">
-
                             <p class="aside-text text-white bg-brown">
-                                Markdown & Git
+                                Markdown &amp; Git
                             </p>
                         </a>
-
                     </li>
-
                     <li class="aside-item">
-
                         <a class="dec-non text-white bg-brown" href="https://klimxam.github.io/rsschool-cv/">
-
                             <p class="aside-text text-white bg-brown">
-                                HTML, CSS & Git Basics
+                                HTML, CSS &amp; Git Basics
                             </p>
-
                         </a>
-
                     </li>
-
                 </ul>
-
             </section>
-
             <hr class="line-aside">
-
-
         </aside>
-
         <article class="cont article">
-
             <h2 class="text-brown bg-white">
                 SUMMARY
             </h2>
-
             <section class="article-section bg-white">
-
                 <h4 class="text-brown bg-white" id="About">
-                 ABOUT ME
+                    ABOUT ME
                 </h4>
-
                 <p class="article-text text-brown bg-white">
                     I have been working at JSC SRSU-3 Novopolotsk since 2005 as an
                     engineering employee. Since 2010, the head of the department. There
                     is a desire to learn something new and modern. I became interested
                     in IT technologies, namely frontend.
                 </p>
-
             </section>
-
             <hr class="line">
-
             <section class="article-section bg-white">
-
                 <h4 class="text-brown bg-white" id="Education">
-                 EDUCATION
+                    EDUCATION
                 </h4>
-
                 <p class="article-text text-brown bg-white">
                     State educational institution
                     <br>
@@ -224,115 +137,69 @@
                     <br>
                     civil engineer
                 </p>
-
             </section>
-
             <hr class="line">
-
             <section class="article-section bg-white">
-
                 <h4 class="text-brown bg-white" id="CODE-EXAMPLES">
-                 CODE EXAMPLES
+                    CODE EXAMPLES
                 </h4>
-
                 <pre class="bg-white">
                     <code class="bg-white">
             function multiply(a, b) {
                 return a * b;
-            } 
+            }
                     </code>
-
                 </pre>
-
             </section>
-
             <hr class="line">
-
             <section class="menu">
-
                 <h4 class="text-brown bg-white" id="Contacts">
-                 CONTACTS
+                    CONTACTS
                 </h4>
-
                 <ul class="menu-list bg-white">
-
                     <li class="menu-item">
-
                         <img class="menu-img bg-white" src="./images/mail1.png" alt="mail">
-
                         <a class="menu-link text-brown bg-white" href="mailto:apecypc@gmail.com">
                             apecypc@gmail.com
                         </a>
-
                     </li>
-
                     <li class="menu-item">
-
                         <img class="menu-img bg-white" src="./images/gh.png" alt="github">
-
                         <a class="dec-non text-brown bg-white" href="https://github.com/KlimXam">
                             KlimXam
                         </a>
-
                     </li>
-
                     <li class="menu-item">
-
                         <img class="menu-img bg-white" src="./images/phone1.png" alt="phone">
-
                         <a class="menu-link text-brown bg-white" href="”tel:+375297136729”">
                             +375(29)713-67-29
                         </a>
-
                     </li>
-
                     <li class="menu-item">
-
                         <img class="menu-img bg-white" src="./images/dis1.png" alt="Discord">
-
                         <!--Added a school server due to the lack of its own-->
                         <a class="menu-link text-brown bg-white" href="https://discord.gg/gFnRh8Sudg">
                             @KlimXam
                         </a>
-
                     </li>
-
                 </ul>
-
             </section>
-
             <hr class="line">
-
         </article>
-
     </main>
-
     <footer class="footer">
-
         <div class="footer-left">
-
             <a class="footer-author" href="https://github.com/KlimXam">
-
                 <h4 class="footer-author">
                     © 2023 KOVALENOK EUGEN
                 </h4>
-
             </a>
-
         </div>
-
         <div class="footer-right">
-
             <a class="footer-logo" href="https://rs.school/js/">
-
                 <img class="logo" src="https://rs.school/images/rs_school_js.svg" alt="logo">
-
             </a>
-
         </div>
-
     </footer>
-
 </body>
-
 </html>
